<?xml version="1.0" encoding="utf-8"?>

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/backrepeat" >
	
  <LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20sp"
    android:orientation="vertical"  >

	<TextView
        android:layout_width="fill_parent"
        android:layout_height="70px"
        android:padding="5px"
        android:textSize="30sp"
        android:textColor="#222222"
        android:paddingTop="20sp"
        android:paddingBottom="20sp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:text="@string/app_name" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5px"
        android:textColor="#333333"
        android:text="@string/username" />
    
    <EditText
    	android:id="@+id/username"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:singleLine="true" />
    	
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5px"
        android:textColor="#333333"
        android:text="@string/password" />
    
    <EditText
    	android:id="@+id/password"
    	android:inputType="textPassword"
    	android:password="true"
    	android:singleLine="true"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" />
   
   <Button
   		android:id="@+id/loginButton"
   		android:text="@string/login"
   		android:padding="5px"
   		android:onClick="onClickLogin"
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content" />
   
</LinearLayout>
</ScrollView>